Release Notes for Cppcheck 2.15

New checks:
-

Improved checking:
-

GUI:
-

Changed interface:
-

Deprecations:
-

Other:
-