@@ -54,6 +54,8 @@ else()
         if(NOT PYTHONINTERP_FOUND AND NOT USE_MATCHCOMPILER_OPT STREQUAL "Off")
             message(WARNING "No python interpreter found - disabling matchcompiler.")
             set(USE_MATCHCOMPILER_OPT "Off")
+        else()
+            message(WARNING "Support for Python 2.7 is deprecated (it went EOL in January 2020) and will be removed in Cppcheck 2.16 - please use Python 3.x instead.")
         endif()
     endif()
     if(PYTHONINTERP_FOUND)
