@@ -13,6 +13,7 @@ Changed interface:
 -
 
 Deprecations:
+- Support for Python 2.7 has been deprecated (it went EOL in January 2020) and will be removed in Cppcheck 2.16 - please use Python 3.x instead.
 -
 
 Other:
